--- a/index.html
+++ b/index.html
@@ -21,26 +21,23 @@
 
                 <ul class = "social-links">
                     <li>
-                        <a href = "#" class = "flex">
+                        <a href = "#contact" class = "flex">
                             <i class="fa-brands fa-weixin"></i>
-                            <!-- <img src="./icons/wechat.svg" alt="wechat icon"> -->
                         </a>
                     </li>
                     <li>
-                        <a href = "#" class = "flex">
+                        <a href = "https://www.xiaohongshu.com/user/profile/5f238f2f000000000101cd7e" class = "flex" target="_blank">
                             <img src="./icons/xhs.svg" alt="xiaohongshu icon">
                         </a>
                     </li>
                     <li>
                         <a href = "#" class = "flex">
                             <i class="fa-brands fa-tiktok"></i>
-                            <!-- <img src="./icons/tiktok.svg" alt="tiktok icon"> -->
                         </a>
                     </li>
                     <li>
                         <a href = "#" class = "flex">
                             <i class = "fab fa-instagram"></i>
-                            <!-- <img src="./icons/instagram.svg" alt="tiktok icon"> -->
                         </a>
                     </li>
                 </ul>
@@ -148,6 +145,7 @@
                         </div>
                         <p class = "lead"><i class = "fas fa-phone-alt"></i> +61 0452150286</p>
                         <p class = "lead"><i class = "fas fa-envelope"></i> yetianhaowork@gmail.com</p>
+                        <p class = "lead"><i class="fa-brands fa-weixin fa-sm"></i> cc_is_th</p>
                         <form action="">
                             <input type = "text" class = "form-control" placeholder="Your name here ...">
                             <input type = "email" class = "form-control" placeholder="Your email here">
@@ -192,19 +190,20 @@
             <div class = "footer-content">
                 <div>
                     <h3>DOUBLE SHOT STUDIO</h3>
-                    <div><img src = "images/about-pic.jpg"></div>
+                    <div><img src = "images/about-photo.jpg"></div>
                 </div>
 
                 <div>
-                    <h3>Links</h3>
+                    <!-- <h3>Links</h3> -->
                     <ul class = "flex">
-                        <li><a href = "#about">About US</a></li>
+                        <li><a href = "#about">About</a></li>
                         <li><a href = "#work">Work</a></li>
                         <li><a href = "#portfolio">Portfolio</a></li>
-                        <li><a href = "#contact">Contact US</a></li>
+                        <li><a href = "#contact">Contact</a></li>
                         <li><a href = "#insta">Instagram</a></li>
                     </ul>
                 </div>
+                <p class="copyright">© 2023 Double Shot Studio. All rights reserved.</p>
             </div>
         </div>
     </footer>
