add work types, icons, add ins icons in about

--- a/index.html
+++ b/index.html
@@ -31,15 +31,15 @@
                         </a>
                     </li>
                     <li>
-                        <a href = "#" class = "flex">
+                        <a href = "https://www.tiktok.com/@double_shot_" class = "flex" target="_blank">
                             <i class="fa-brands fa-tiktok"></i>
                         </a>
                     </li>
-                    <li>
+                    <!-- <li>
                         <a href = "#" class = "flex">
                             <i class = "fab fa-instagram"></i>
                         </a>
-                    </li>
+                    </li> -->
                 </ul>
             </div>
         </div>
@@ -59,8 +59,12 @@
                         <div class = "title">
                             <h2>About Us</h2>
                         </div>
-                        <p class = "lead">Professional photographers Ariel and CC are experienced all round photographer based in Melbourne.</p>
-                        <p class = "lead">You can checkout their recent works and experiences below. They considers photography as their passion more than profession.</p>
+                        <p class = "lead">Professional photographers Ariel
+                            <a href = "https://www.instagram.com/jqii0012/" target="_blank"><i class = "fab fa-instagram"></i></a>
+                            and CC <a href = "https://www.instagram.com/cc_is_th/" target="_blank"><i class = "fab fa-instagram"></i></a> 
+                            are experienced all round photographers based in Melbourne.
+                        </p>
+                        <p class = "lead">You can checkout their recent works and experiences below. They consider photography as their passion more than profession.</p>
                         <a href = "#work" class = "btn-down">
                             <i class = "fas fa-chevron-down"></i>
                         </a>
@@ -87,15 +91,31 @@
                     <div class = "work-bottom grid">
                         <div>
                             <span class = "icon"><div class="icon-pic"><i class="fa-solid fa-graduation-cap fa-2xl"></i></div></span>
-                            <h3>Graduation Portrait</h3>
+                            <h3>Graduation</h3>
                         </div>
                         <div>
                             <span class = "icon"><div class="icon-pic"><i class="fa-solid fa-users-viewfinder fa-2xl"></i></div></span>
-                            <h3>Solo/Couple Portrait</h3>
+                            <h3>Portrait</h3>
                         </div>
                         <div>
                             <span class = "icon"><div class="icon-pic"><i class="fa-solid fa-people-roof fa-2xl"></i></div></span>
-                            <h3>Family Portrait</h3>
+                            <h3>Family</h3>
+                        </div>
+                        <div>
+                            <span class = "icon"><div class="icon-pic"><i class="fa-solid fa-paw fa-2xl"></i></div></span>
+                            <h3>Pet</h3>
+                        </div>
+                        <div>
+                            <span class = "icon"><div class="icon-pic"><i class="fa-solid fa-champagne-glasses fa-2xl"></i></div></span>
+                            <h3>Event</h3>
+                        </div>
+                        <div>
+                            <span class = "icon"><div class="icon-pic"><i class="fa-solid fa-heart fa-2xl"></i></div></span>
+                            <h3>Wedding</h3>
+                        </div>
+                        <div>
+                            <span class = "icon"><div class="icon-pic"><i class="fa-solid fa-house fa-2xl"></i></div></span>
+                            <h3>Real Estate</h3>
                         </div>
                         <div>
                             <span class = "icon"><div class="icon-pic"><i class="fa-solid fa-mountain-sun fa-2xl"></i></div></span>
@@ -145,7 +165,7 @@
                         </div>
                         <p class = "lead"><i class = "fas fa-phone-alt"></i> +61 0452150286</p>
                         <p class = "lead"><i class = "fas fa-envelope"></i> yetianhaowork@gmail.com</p>
-                        <p class = "lead"><i class="fa-brands fa-weixin fa-sm"></i> cc_is_th</p>
+                        <p class = "lead"><i class="fa-brands fa-weixin"></i> cc_is_th</p>
                         <form action="">
                             <input type = "text" class = "form-control" placeholder="Your name here ...">
                             <input type = "email" class = "form-control" placeholder="Your email here">
