sticky navigation bar added, with screen fit

--- a/index.html
+++ b/index.html
@@ -6,11 +6,44 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Double Shot Studio</title>
     <!-- font awesome -->
-    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css" integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA==" crossorigin="anonymous" referrerpolicy="no-referrer" /> -->
     <script src="https://kit.fontawesome.com/39e073bf08.js" crossorigin="anonymous"></script>
     <link rel = "stylesheet" href = "css/style.css">
 </head>
 <body>
+    <!-- navigation bar -->
+    <nav id="navbar">
+        <div class="container flex">
+            <div class="nav-control flex">  
+                <button class="navbar-toggler" type="button">
+                    <span><i class="fa-solid fa-bars" style="color: #ffffff;"></i></span>
+                </button>       
+            </div>
+
+            <div class="nav-content">
+                <ul class="flex">
+                    <li>
+                    <a href="#">Double Shot Studio</a>
+                    </li>
+                    <li>
+                    <a href="#about">About</a>
+                    </li>
+                    <li>
+                    <a href="#work">Work</a>
+                    </li>
+                    <li>
+                    <a href="#portfolio">Portfolio</a>
+                    </li>
+                    <li>
+                    <a href="#contact">Contact</a>
+                    </li>
+                    <li>
+                    <a href="#insta">Instagram</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
     
     <!-- header -->
     <header id = "header" class = "vh-100 flex">
@@ -232,5 +265,7 @@
 
     <!-- typewriting js -->
     <script src = "typewriting-master/typewriting.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script src="./index.js"></script>
 </body>
 </html>
