navbar when screen <576: i+double shot + expand i

--- a/index.html
+++ b/index.html
@@ -12,8 +12,12 @@
 <body>
     <!-- navigation bar -->
     <nav id="navbar">
-        <div class="container flex">
-            <div class="nav-control flex">  
+        <div class="container">
+            <div class="nav-control">
+                <a href="#">
+                    <i class="fa-solid fa-camera"></i>
+                    Double Shot
+                  </a>  
                 <button class="navbar-toggler" type="button">
                     <span><i class="fa-solid fa-bars" style="color: #ffffff;"></i></span>
                 </button>       
