navigation bar finished

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="nav-control">
                 <a href="#">
                     <i class="fa-solid fa-camera"></i>
-                    Double Shot
+                    Double Shot Studio
                   </a>  
                 <button class="navbar-toggler" type="button">
                     <span><i class="fa-solid fa-bars" style="color: #ffffff;"></i></span>
@@ -26,7 +26,9 @@
             <div class="nav-content">
                 <ul class="flex">
                     <li>
-                    <a href="#">Double Shot Studio</a>
+                    <a href="#">
+                        <i class="fa-solid fa-camera"></i>
+                        Double Shot Studio</a>
                     </li>
                     <li>
                     <a href="#about">About</a>
@@ -270,6 +272,6 @@
     <!-- typewriting js -->
     <script src = "typewriting-master/typewriting.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-    <script src="./index.js"></script>
+    <script src="./script.js"></script>
 </body>
 </html>
