navigation at bottom delete

--- a/index.html
+++ b/index.html
@@ -251,9 +251,8 @@
                     <h3>DOUBLE SHOT STUDIO</h3>
                     <div><img src = "images/about-photo.jpg"></div>
                 </div>
-
-                <div>
-                    <!-- <h3>Links</h3> -->
+                <!-- <div>
+                    <h3>Links</h3>
                     <ul class = "flex">
                         <li><a href = "#about">About</a></li>
                         <li><a href = "#work">Work</a></li>
@@ -261,7 +260,7 @@
                         <li><a href = "#contact">Contact</a></li>
                         <li><a href = "#insta">Instagram</a></li>
                     </ul>
-                </div>
+                </div> -->
                 <p class="copyright">© 2023 Double Shot Studio. All rights reserved.</p>
             </div>
         </div>
