order of section changed

--- a/index.html
+++ b/index.html
@@ -31,19 +31,19 @@
                         Double Shot Studio</a>
                     </li>
                     <li>
-                    <a href="#about">About</a>
-                    </li>
-                    <li>
                     <a href="#work">Work</a>
                     </li>
                     <li>
                     <a href="#portfolio">Portfolio</a>
                     </li>
                     <li>
-                    <a href="#contact">Contact</a>
+                    <a href="#insta">Instagram</a>
                     </li>
                     <li>
-                    <a href="#insta">Instagram</a>
+                        <a href="#contact">Contact</a>
+                        </li>
+                    <li>
+                    <a href="#about">About</a>
                     </li>
                 </ul>
             </div>
@@ -74,11 +74,6 @@
                             <i class="fa-brands fa-tiktok"></i>
                         </a>
                     </li>
-                    <!-- <li>
-                        <a href = "#" class = "flex">
-                            <i class = "fab fa-instagram"></i>
-                        </a>
-                    </li> -->
                 </ul>
             </div>
         </div>
@@ -87,32 +82,6 @@
 
     <!-- main content -->
     <main>
-        <!-- about section -->
-        <section id = "about" class = "about py-7">
-            <div class = "container">
-                <div class = "about-content grid">
-                    <div class = "about-left">
-                        <img src = "images/about-photo.jpg" alt = "about photo">
-                    </div>
-                    <div class = "about-right">
-                        <div class = "title">
-                            <h2>About Us</h2>
-                        </div>
-                        <p class = "lead">Professional photographers Ariel
-                            <a href = "https://www.instagram.com/jqii0012/" target="_blank"><i class = "fab fa-instagram"></i></a>
-                            and CC <a href = "https://www.instagram.com/cc_is_th/" target="_blank"><i class = "fab fa-instagram"></i></a> 
-                            are experienced all round photographers based in Melbourne.
-                        </p>
-                        <p class = "lead">You can checkout their recent works and experiences below. They consider photography as their passion more than profession.</p>
-                        <a href = "#work" class = "btn-down">
-                            <i class = "fas fa-chevron-down"></i>
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <!-- end of about section -->
-
         <!-- work section -->
         <section id = "work" class = "vh-100 flex py-7">
             <div class = "container">
@@ -175,7 +144,7 @@
                 <div class = "portfolio-content">
                     <div class = "title">
                         <h2>Our lastest works</h2>
-                        <a href = "#contact" class = "btn-down">
+                        <a href = "#insta" class = "btn-down">
                             <i class = "fas fa-chevron-down"></i>
                         </a>
                     </div>
@@ -194,39 +163,13 @@
         </section>
         <!-- end of portfolio section -->
 
-        <!-- contact section -->
-        <section id = "contact" class = "py-7">
-            <div class = "container">
-                <div class = "contact-content flex">
-                    <div class = "contact-left">
-                        <div class="title">
-                            <h2>contact with Us</h2>
-                        </div>
-                        <p class = "lead"><i class = "fas fa-phone-alt"></i> +61 0452150286</p>
-                        <p class = "lead"><i class = "fas fa-envelope"></i> yetianhaowork@gmail.com</p>
-                        <p class = "lead"><i class="fa-brands fa-weixin"></i> cc_is_th</p>
-                        <form action="">
-                            <input type = "text" class = "form-control" placeholder="Your name here ...">
-                            <input type = "email" class = "form-control" placeholder="Your email here">
-                            <input type = "submit" class = "btn-submit btn" value = "Submit">
-                        </form>
-                    </div>
-
-                    <div class = "contact-right">
-                        <img src = "images/contact-pic.jpg" alt = "contact image">
-                    </div>
-                </div>
-            </div>
-        </section>
-        <!-- end of contact section -->
-
         <!-- instagram section -->
         <section id = "insta" class = "py-7">
             <div class = "container">
                 <div class = "insta-content">
                     <div class = "title">
                         <h2>instagram</h2>
-                        <a href = "#footer" class = "btn-down btn-down-white">
+                        <a href = "#contact" class = "btn-down btn-down-white">
                             <i class = "fas fa-chevron-down"></i>
                         </a>
                     </div>
@@ -242,6 +185,59 @@
         <!-- end of instagram section -->
     </main>
     <!-- end of main content -->
+
+            <!-- contact section -->
+            <section id = "contact" class = "py-7">
+                <div class = "container">
+                    <div class = "contact-content flex">
+                        <div class = "contact-left">
+                            <div class="title">
+                                <h2>contact with Us</h2>
+                                <a href = "#about" class = "btn-down">
+                                    <i class = "fas fa-chevron-down"></i>
+                                </a>
+                            </div>
+                            <p class = "lead"><i class = "fas fa-phone-alt"></i> +61 0452150286</p>
+                            <p class = "lead"><i class = "fas fa-envelope"></i> yetianhaowork@gmail.com</p>
+                            <p class = "lead"><i class="fa-brands fa-weixin"></i> cc_is_th</p>
+                            <form action="">
+                                <input type = "text" class = "form-control" placeholder="Your name here ...">
+                                <input type = "email" class = "form-control" placeholder="Your email here">
+                                <input type = "submit" class = "btn-submit btn" value = "Submit">
+                            </form> 
+                        </div>
+    
+                        <div class = "contact-right">
+                            <img src = "images/contact-pic.jpg" alt = "contact image">
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <!-- end of contact section -->
+
+    <!-- about section -->
+    <section id = "about" class = "about py-7">
+        <div class = "container">
+            <div class = "about-content grid">
+                <div class = "about-left">
+                    <img src = "images/about-photo.jpg" alt = "about photo">
+                </div>
+                <div class = "about-right">
+                    <div class = "title">
+                        <h2>About Us</h2>
+                    </div>
+                    <p class = "lead">Professional photographers Ariel
+                        <a href = "https://www.instagram.com/jqii0012/" target="_blank"><i class = "fab fa-instagram"></i></a>
+                        and CC <a href = "https://www.instagram.com/cc_is_th/" target="_blank"><i class = "fab fa-instagram"></i></a> 
+                        are experienced all round photographers based in Melbourne.
+                    </p>
+                    <p class = "lead">You can checkout their recent works and experiences below. They consider photography as their passion more than profession.</p>
+
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- end of about section -->
 
     <!-- footer -->
     <footer id = "footer" class = "py-7">
