wechat icon jump

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
                 <ul class = "social-links">
                     <li>
-                        <a href = "#contact" class = "flex">
+                        <a id="wechat" href = "#contact" class = "flex">
                             <i class="fa-brands fa-weixin"></i>
                         </a>
                     </li>
@@ -199,7 +199,7 @@
                             </div>
                             <p class = "lead"><i class = "fas fa-phone-alt"></i> +61 0452150286</p>
                             <p class = "lead"><i class = "fas fa-envelope"></i> yetianhaowork@gmail.com</p>
-                            <p class = "lead"><i class="fa-brands fa-weixin"></i> cc_is_th</p>
+                            <p class = "lead jump-link"><i class="fa-brands fa-weixin"></i> cc_is_th</p>
                             <form action="">
                                 <input type = "text" class = "form-control" placeholder="Your name here ...">
                                 <input type = "email" class = "form-control" placeholder="Your email here">
