gallery navigation bar grid

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                     </div>
 
                      <!-- Category bar -->
-                    <div class="portfolio-nav">
+                    <div class="grid portfolio-nav">
                         <!-- <button class="category-button active" data-category="all">All</button> -->
                         <button class="category-button active" data-category="graduation">Graduation</button>
                         <button class="category-button" data-category="portrait">Portrait</button>
