--- a/index.html
+++ b/index.html
@@ -204,7 +204,9 @@
                         <span class="lightbox-prev" id="lightbox-prev">&#10094;</span>
                         <span class="lightbox-next" id="lightbox-next">&#10095;</span>
                         <div class="lightbox-content">
-                            <img id="lightbox-img" src="" alt="Lightbox Image">
+                            <div id="zoom-container">
+                                <img id="lightbox-img" src="" alt="Lightbox Image">
+                            </div>
                             <div class="lightbox-caption" id="lightbox-caption"></div>
                         </div>
                     </div>
@@ -317,6 +319,7 @@
     <!-- typewriting js -->
     <script src = "typewriting-master/typewriting.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.panzoom/2.0.6/jquery.panzoom.min.js"></script>
     <script src="./script.js"></script>
 </body>
 </html>
