--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                         <span class="lightbox-prev" id="lightbox-prev">&#10094;</span>
                         <span class="lightbox-next" id="lightbox-next">&#10095;</span>
                         <div class="lightbox-content">
-                            <img id="lightbox-img" src="" alt="Lightbox Image">
+                            <img id="lightbox-img" class="lightbox-img" alt="Lightbox Image">
                             <div class="lightbox-caption" id="lightbox-caption"></div>
                         </div>
                     </div>
