delete instagram section

--- a/index.html
+++ b/index.html
@@ -37,9 +37,6 @@
                     <a href="#portfolio">Portfolio</a>
                     </li>
                     <li>
-                    <a href="#insta">Instagram</a>
-                    </li>
-                    <li>
                         <a href="#contact">Contact</a>
                         </li>
                     <li>
@@ -144,14 +141,13 @@
                 <div class = "portfolio-content">
                     <div class = "title">
                         <h2>Our lastest works</h2>
-                        <a href = "#insta" class = "btn-down">
+                        <a href = "#contact" class = "btn-down">
                             <i class = "fas fa-chevron-down"></i>
                         </a>
                     </div>
 
                      <!-- Category bar -->
                     <div class="grid portfolio-nav">
-                        <!-- <button class="category-button active" data-category="all">All</button> -->
                         <button class="category-button active" data-category="graduation">Graduation</button>
                         <button class="category-button" data-category="portrait">Portrait</button>
                         <button class="category-button" data-category="family">Family</button>
@@ -204,7 +200,7 @@
                         <span class="lightbox-prev" id="lightbox-prev">&#10094;</span>
                         <span class="lightbox-next" id="lightbox-next">&#10095;</span>
                         <div class="lightbox-content">
-                            <img id="lightbox-img" class="lightbox-img" alt="Lightbox Image">
+                            <img class="lightbox-img" id="lightbox-img" alt="Lightbox Image">
                             <div class="lightbox-caption" id="lightbox-caption"></div>
                         </div>
                     </div>
@@ -212,58 +208,37 @@
             </div>
         </section>
         <!-- end of portfolio section -->
-
-        <!-- instagram section -->
-        <section id = "insta" class = "py-7">
-            <div class = "container">
-                <div class = "insta-content">
-                    <div class = "title">
-                        <h2>instagram</h2>
-                        <a href = "#contact" class = "btn-down btn-down-white">
-                            <i class = "fas fa-chevron-down"></i>
-                        </a>
-                    </div>
-                    <div class = "insta-grid grid">
-                        <div><img src = "images/port-1.jpg"></div>
-                        <div><img src = "images/port-2.jpg"></div>
-                        <div><img src = "images/port-3.jpg"></div>
-                        <div><img src = "images/port-4.jpg"></div>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <!-- end of instagram section -->
     </main>
     <!-- end of main content -->
 
-            <!-- contact section -->
-            <section id = "contact" class = "py-7">
-                <div class = "container">
-                    <div class = "contact-content flex">
-                        <div class = "contact-left">
-                            <div class="title">
-                                <h2>contact with Us</h2>
-                                <a href = "#about" class = "btn-down">
-                                    <i class = "fas fa-chevron-down"></i>
-                                </a>
-                            </div>
-                            <p class = "lead"><i class = "fas fa-phone-alt"></i> +61 0452150286</p>
-                            <p class = "lead"><i class = "fas fa-envelope"></i> yetianhaowork@gmail.com</p>
-                            <p class = "lead jump-link"><i class="fa-brands fa-weixin"></i> cc_is_th</p>
-                            <form action="">
-                                <input type = "text" class = "form-control" placeholder="Your name here ...">
-                                <input type = "email" class = "form-control" placeholder="Your email here">
-                                <input type = "submit" class = "btn-submit btn" value = "Submit">
-                            </form> 
-                        </div>
-    
-                        <div class = "contact-right">
-                            <img src = "images/contact-pic.jpg" alt = "contact image">
-                        </div>
+    <!-- contact section -->
+    <section id = "contact" class = "py-7">
+        <div class = "container">
+            <div class = "contact-content flex">
+                <div class = "contact-left">
+                    <div class="title">
+                        <h2>contact with Us</h2>
+                        <a href = "#about" class = "btn-down">
+                            <i class = "fas fa-chevron-down"></i>
+                        </a>
                     </div>
+                    <p class = "lead"><i class = "fas fa-phone-alt"></i> +61 0452150286</p>
+                    <p class = "lead"><i class = "fas fa-envelope"></i> yetianhaowork@gmail.com</p>
+                    <p class = "lead jump-link"><i class="fa-brands fa-weixin"></i> cc_is_th</p>
+                    <form action="">
+                        <input type = "text" class = "form-control" placeholder="Your name here ...">
+                        <input type = "email" class = "form-control" placeholder="Your email here">
+                        <input type = "submit" class = "btn-submit btn" value = "Submit">
+                    </form> 
                 </div>
-            </section>
-            <!-- end of contact section -->
+
+                <div class = "contact-right">
+                    <img src = "images/contact-pic.jpg" alt = "contact image">
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- end of contact section -->
 
     <!-- about section -->
     <section id = "about" class = "about py-7">
@@ -297,16 +272,6 @@
                     <h3>DOUBLE SHOT STUDIO</h3>
                     <div><img src = "images/about-photo.jpg"></div>
                 </div>
-                <!-- <div>
-                    <h3>Links</h3>
-                    <ul class = "flex">
-                        <li><a href = "#about">About</a></li>
-                        <li><a href = "#work">Work</a></li>
-                        <li><a href = "#portfolio">Portfolio</a></li>
-                        <li><a href = "#contact">Contact</a></li>
-                        <li><a href = "#insta">Instagram</a></li>
-                    </ul>
-                </div> -->
                 <p class="copyright">© 2023 Double Shot Studio. All rights reserved.</p>
             </div>
         </div>
