change event to food

--- a/index.html
+++ b/index.html
@@ -85,6 +85,9 @@
                 <div class = "work-content">
                     <div class = "title">
                         <h2>what we are doing?</h2>
+                        <a href = "#portfolio" class = "btn-down btn-down-white">
+                            <i class = "fas fa-chevron-down"></i>
+                        </a>
                     </div>
                     <ul class = "work-top grid">
                         <li class = "lead"><i class = "fas fa-dot-circle"></i> We work according to the guidelines of the American Institute of Digital Photography with regard to color management and file handling.</li>
@@ -111,8 +114,8 @@
                             <h3>Pet</h3>
                         </div>
                         <div>
-                            <span class = "icon"><div class="icon-pic"><i class="fa-solid fa-champagne-glasses fa-2xl"></i></div></span>
-                            <h3>Event</h3>
+                            <span class = "icon"><div class="icon-pic"><i class="fa-solid fa-pizza-slice fa-2xl"></i></div></span>
+                            <h3>Food</h3>
                         </div>
                         <div>
                             <span class = "icon"><div class="icon-pic"><i class="fa-solid fa-heart fa-2xl"></i></div></span>
@@ -127,9 +130,7 @@
                             <h3>Landscape</h3>
                         </div>
                     </div>
-                    <a href = "#portfolio" class = "btn-down btn-down-white">
-                        <i class = "fas fa-chevron-down"></i>
-                    </a>
+                    
                 </div>
             </div>
         </section>
@@ -152,7 +153,7 @@
                         <button class="category-button" data-category="portrait">Portrait</button>
                         <button class="category-button" data-category="family">Family</button>
                         <button class="category-button" data-category="pet">Pet</button>
-                        <button class="category-button" data-category="event">Event</button>
+                        <button class="category-button" data-category="event">Food</button>
                         <button class="category-button" data-category="wedding">Wedding</button>
                         <button class="category-button" data-category="realestate">Real Estate</button>
                         <button class="category-button" data-category="landscape">Landscape</button>
